# PC-TABD

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py
cli/: __init__.py  generate_csv.py  generate_dataset.py  generate_pctabd.py
codecs/: __init__.py  trajectory.py
configs/: example_gopro.yaml  gopro_100.yaml
core/: __init__.py  camera.py  config.py  engine.py  isp.py  shutter.py  trajectories.py  visibility.py
generators/: __init__.py  csv_generator.py  dataset_generator.py
pc-tab/: __init__.py  camera_extractor.py  config.py  conventions.py  engine.py  isp.py  metrics.py  regularizers.py  shutter.py  trajectories.py  visibility.py
tests/: __init__.py  test_codecs.py  test_config.py  test_engine.py  test_generators.py
